# RustyTerm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: cat.rs  cd.rs  cm_no_output.rs  cm_w_output.rs  file_creation.rs  ls.rs  pipes.rs  pwd.rs  rm.rs  text_editor.rs
