[package]
name = "RustyTerm"
version = "0.1.4"
authors = ["Adrian Castilla <54941915+AdrianZzito@users.noreply.github.com>"]
edition = "2018"
rust-version = "1.70"
description = "RustyTerm is an advanced terminal fully build in Rust."
documentation = "https://docs.rs/rustyterm"
readme = "README.md"
repository = "https://github.com/AdrianZzito/RustyTerm.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "12.0.0"
libc = "0.2.147"
nix = "0.26.2"